--- a/apps/analog-app/src/index.html
+++ b/apps/analog-app/src/index.html
@@ -6,6 +6,12 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+    />
+    <link href="/styles.css" 
+    rel="stylesheet" />
   </head>
   <body>
     <analogjs-root></analogjs-root>
