--- a/packages/create-analog/template-angular-v14/src/index.html
+++ b/packages/create-analog/template-angular-v14/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <app-root></app-root>
