--- a/apps/analog-app/index.html
+++ b/apps/analog-app/index.html
@@ -10,11 +10,11 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
     />
-    <link href="/styles.css" 
+    <link href="/src/styles.css" 
     rel="stylesheet" />
   </head>
   <body>
     <analogjs-root></analogjs-root>
-    <script type="module" src="/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
