--- a/packages/create-analog/template-angular-v15/src/index.html
+++ b/packages/create-analog/template-angular-v15/src/index.html
@@ -6,10 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/src/styles.css" />
 </head>
 <body>
   <app-root></app-root>
-  <script type="module" src="/main.ts"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
