--- a/apps/blog-app/index.html
+++ b/apps/blog-app/index.html
@@ -5,7 +5,7 @@
     <title>AnalogApp</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
     <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
