feat(router): add experimental support for markdown as routes (#185)

--- a/apps/blog-app/index.html
+++ b/apps/blog-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AnalogApp</title>
+    <title>My Blog</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
@@ -14,7 +14,7 @@
     rel="stylesheet" />
   </head>
   <body>
-    <analogjs-root></analogjs-root>
+    <blog-root></blog-root>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
