--- a/apps/trpc-app/index.html
+++ b/apps/trpc-app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class='dark h-full' lang='en'>
+<html lang='en'>
 <head>
   <meta charset='utf-8' />
   <title>SPARTAN - Notes App</title>
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel='stylesheet' href='/src/styles.css' />
 </head>
-<body class='h-full bg-zinc-900'>
+<body>
 <trpc-app-root></trpc-app-root>
 <script type='module' src='/src/main.ts'></script>
 </body>
