chore: update default StackBlitz link

--- a/apps/docs-app/static/new/index.html
+++ b/apps/docs-app/static/new/index.html
@@ -1,13 +1,13 @@
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Analog - New Project</title>
-    <meta http-equiv="refresh" content="0; URL=https://stackblitz.com/github/analogjs/analog/tree/stackblitz/packages/create-analog/template-angular-v15?file=vite.config.ts&preset=node" />
-</head>
+    <meta
+      http-equiv="refresh"
+      content="0; URL=https://stackblitz.com/github/analogjs/analog/tree/stackblitz/packages/create-analog/template-angular-v16?file=vite.config.ts&preset=node"
+    />
+  </head>
 
-<body>
-</body>
-
+  <body></body>
 </html>
