chore: run prettier on whole repository
Signed-off-by: Dafnik <git@dafnik.me>

--- a/apps/blog-app/index.html
+++ b/apps/blog-app/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
     <link
-    href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
     />
-    <link href="/src/styles.css"
-    rel="stylesheet" />
+    <link href="/src/styles.css" rel="stylesheet" />
   </head>
   <body>
     <blog-root></blog-root>
