feat: application plugin

--- a/apps/analog-app/index.html
+++ b/apps/analog-app/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <analogjs-root></analogjs-root>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
