--- a/libs/top-bar/src/lib/top-bar/template.html
+++ b/libs/top-bar/src/lib/top-bar/template.html
@@ -18,5 +18,5 @@
 </a>
 
 <a routerLink="/cart" class="button fancy-button">
-  <i class="material-icons">shopping_cart</i>Checkout
+  <i class="material-icons">shopping_cart</i>Checkouts
 </a>
