chore: more stuff

--- a/apps/analog-app/index.html
+++ b/apps/analog-app/index.html
@@ -10,8 +10,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
     <analogjs-root></analogjs-root>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
