--- a/apps/analog-app/index.html
+++ b/apps/analog-app/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link href="/src/styles.css" rel="stylesheet" />
   </head>
   <body>
     <analogjs-root></analogjs-root>
