--- a/packages/create-analog/template-minimal/index.html
+++ b/packages/create-analog/template-minimal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My App</title>
+    <title>__PROJECT_TITLE__</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
